Mon Nov 10 15:29:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Malloc_Test.cpp:
          Fixed compile error

Mon Nov 10 15:28:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-WinCE.h:
          Removed a lot of defines that are really not needed

        * ace/OS_NS_stdlib.{h,cpp,inl}:
          Removed ACE_HAS_WINCE checks with realpath

        * ace/config-win32-common.h:
          Latest wince versions do have missing defines

Mon Nov 10 14:28:00 UTC 2008  Simon Massey <sma at prismtech dot com>

        * tests/Process_Test.cpp:
          Another wchar issue.

Mon Nov 10 12:53:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-WinCE.h:
          WinCE 5 and newer do have filelocks

        * ace/OS_NS_stdio.inl (flock_unlock):
          Use UnlockFileEx because this is also available on WinCE

        * tests/Naming_Test.cpp:
          Use ACE::get_temp_dir to get the real temp dir

Mon Nov 10 11:48:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Malloc_Test.cpp:
          Use argv[0]

        * tests/TP_Reactor_Test.cpp:
          Use ACE_TEXT

Mon Nov 10 10:46:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/ace_for_tao.mpc
        * ace/config-win32-msvc-10.h
        * ace/config-win32-msvc.h
        * ace/Monitor_Control/Monitor_Control.mpc
        * ace/QoS/qos.mpc
        * bin/MakeProjectCreator/config/ace_fl.mpb
        * bin/MakeProjectCreator/config/ace_gl.mpb
        * bin/MakeProjectCreator/config/ace_qt.mpb
        * bin/MakeProjectCreator/config/ace_x11.mpb
        * bin/MakeProjectCreator/config/crosscompile.mpb
        * bin/MakeProjectCreator/config/ipv6.mpb
        * bin/MakeProjectCreator/config/vc_warnings.mpb
          Added Visual Studio 2010 (vc10) support

Mon Nov 10 09:50:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-WinCE.h: